# Contest-Solutions

./: CMakeLists.txt  alternatingSubarray.cpp  checkIfArrayIsGood.cpp  countCompleteSubarrays.cpp  findPrimePairs.cpp  longestAlternatingSubarray.cpp  minBeautifulStrings.cpp  neitherMinNorMax.cpp  numberOfEmployeesWhoMetTarget.cpp  relocateMarbles.cpp  shortestStringContainingThreeStrings.cpp
