cmake_minimum_required(VERSION 3.24)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

include_directories(.)


add_executable(untitled1 longestAlternatingSubarray.cpp findPrimePairs.cpp alternatingSubarray.cpp relocateMarbles.cpp minBeautifulStrings.cpp checkIfArrayIsGood.cpp neitherMinNorMax.cpp numberOfEmployeesWhoMetTarget.cpp countCompleteSubarrays.cpp shortestStringContainingThreeStrings.cpp)

